# argocd-demo

./: .env.example  .gitignore  0-application.yaml  0-docker-secret.yaml  0-notifications-cm.yaml  0-notifications-secret.yaml  0-repo-secret.yaml  1-application.yaml  1-sealed-notifications-secret.yaml  1-sealed-repo-secret.yaml  404.html  README.md  Taskfile.gitflow.yml  Taskfile.yml  application.yaml  devbox.json  freeze.yaml  index.html  mkdocs.yml  prompts  pyproject.toml  sitemap.xml  terraform.tfstate  versions.json
.github/: CODEOWNERS
0.4.1/: 404.html  index.html  sitemap.xml
0.4.2/: 404.html  index.html  sitemap.xml
0.4.5/: 404.html  index.html  sitemap.xml
0.4.6/: 404.html  index.html  sitemap.xml
0.4.7/: 404.html  index.html  sitemap.xml
0.5.0/: 404.html  index.html  sitemap.xml
0.5.1/: 404.html  index.html  sitemap.xml
0.5.2/: 404.html  index.html  sitemap.xml
0.5.3/: 404.html  index.html  sitemap.xml
0.5.4/: 404.html  index.html  sitemap.xml
0.5.5/: 404.html  index.html  sitemap.xml
0.5.6/: 404.html  index.html  sitemap.xml
0.5.7/: 404.html  index.html  sitemap.xml
0.5.8/: 404.html  index.html  sitemap.xml
0.5.9/: 404.html  index.html  sitemap.xml
0.6.0/: 404.html  index.html  sitemap.xml
0.6.1/: 404.html  index.html  sitemap.xml
0.6.2/: 404.html  index.html  sitemap.xml
0.6.3/: 404.html  index.html  sitemap.xml
1.0/: 404.html  index.html  sitemap.xml
1.0.0/: 404.html  index.html  sitemap.xml
1.2.4/: 404.html  index.html  sitemap.xml
2.0.0/: 404.html  index.html  sitemap.xml
3.0.0/: 404.html  index.html  (+1 more)
(+516 files in other folders)
